# loom

./: .dockerignore  .env.example  .git-commit-msg  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  SOUL.md  TUI_DESIGN.md  commit-msg.txt  run-bot.bat  run_tests_parallel.sh
cli/: Cargo.toml
cli/examples/: tui_demo.rs
cli/src/: args.rs  bootstrap.rs  display_limits.rs  envelope.rs  lib.rs  log_format.rs  logging.rs  main.rs  mcp_manager.rs  model_cmd.rs  output.rs  repl.rs  run_flow.rs  session.rs  subcommands.rs  tool_cmd.rs
cli/src/backend/: auto_start.rs  local.rs  mod.rs  remote.rs
cli/src/run/: agent.rs  builder.rs  contract.rs  display.rs  mod.rs
cli/src/tui/: app.rs  event.rs  mod.rs  runner.rs  runtime.rs  terminal.rs  ui.rs
cli/tests/: cli_interactive.rs  cli_tool_cmd.rs  mcp_cli_test.rs  server_e2e.rs
cli/tests/e2e/: invalid_json.rs  ping.rs  run_react.rs  tool_show_existing.rs  tools_list.rs
config/: Cargo.toml  README.md
config/examples/: config.toml.example
config/src/: dotenv.rs  home.rs  lib.rs  lsp_config.rs  mcp_config.rs  tracing_init.rs  xdg_toml.rs
config/tests/: mcp_config_e2e.rs  providers_e2e.rs
graphweave/: Cargo.toml
graphweave-cli/: Cargo.toml
graphweave-cli/src/: lib.rs  logging.rs  main.rs  repl.rs  serve.rs  tool_cmd.rs
graphweave-cli/src/backend/: auto_start.rs  local.rs  mod.rs  remote.rs
graphweave-cli/src/run/: agent.rs  builder.rs  display.rs  dup.rs  (+4 more)
graphweave/prompts/: got.yaml  helve.yaml  react.yaml  tot.yaml
graphweave/src/: error.rs  lib.rs  message.rs  runner_common.rs  traits.rs
graphweave/tests/: apply_patch_tool.rs  bash_tool.rs  bash_tools_source.rs  batch_tool.rs  build_react_runner_invoke.rs  build_tool_source_working_folder.rs  config_summary.rs  embedder.rs  exa_http.rs  file_tool_source.rs  grep_file_tool.rs  init_logging.rs  mcp_session.rs  mcp_tool_source.rs  memory.rs  memory_in_memory.rs  memory_lance.rs  memory_sqlite.rs  memory_sqlite_vec.rs  memory_tools_source.rs  mock_llm.rs  mock_tool_source.rs  multiedit_tool.rs  name_node.rs  openai_sse.rs  react_linear_chain.rs  react_nodes.rs  react_state.rs  read_only_dir_tool_source.rs  short_term_memory_tool_source.rs  skill_tool.rs  store_tool_source.rs  todo_tools.rs  tool_registry.rs  tool_streaming.rs  twitter_search.rs  web_fetcher.rs
graphweave/tools/: bash.yaml  batch.yaml  codesearch.yaml  create_dir.yaml  delete_file.yaml  edit_file.yaml  list_dir.yaml  read.yaml  read_file.yaml  remember.yaml  skill.yaml  todo_read.yaml  todo_write.yaml
loom/: Cargo.toml
loom-acp/: Cargo.toml
loom-acp/src/: agent.rs  agent_registry.rs  client_capabilities.rs  client_methods.rs  content.rs  last_model.rs  lib.rs  logging.rs  main.rs  protocol.rs  session.rs  session_config_store.rs  stream_bridge.rs  terminal.rs
loom-acp/tests/: agent_integration.rs  agent_model_resolution.rs  agent_modes.rs  capabilities_structure.rs  diff_protocol_e2e.rs  initialization_state_machine.rs  log_file_subprocess.rs  mcp_capabilities.rs  prompt_capabilities_e2e.rs  prompt_turn_e2e.rs  session_capabilities_e2e.rs  test_content_types.rs  test_fs_tools_integration.rs  test_location.rs  test_terminal_integration.rs
loom-examples/: Cargo.toml
loom-examples/examples/: echo.rs  memory_checkpoint.rs  memory_persistence.rs  openai_embedding.rs  react_exa.rs  react_linear.rs  react_mcp.rs  react_mcp_gitlab.rs  react_memory.rs  state_graph_echo.rs
loom-workspace/: Cargo.toml
loom-workspace/gh/: Cargo.toml  Dockerfile  README.md
loom-workspace/src/: lib.rs  store.rs
loom-workspace/tests/: store_integration.rs
loom/examples/: models_dev_demo.rs
loom/prompts/: README.md  SOUL.md  dup.yaml  helve.yaml  react.yaml
loom/src/: error.rs  http_retry.rs  lib.rs  message.rs  runner_common.rs  skill.rs  title_generator.rs
loom/tests/: apply_patch_tool.rs  bash_tool.rs  bash_tools_source.rs  batch_tool.rs  build_react_runner_invoke.rs  build_tool_source_github_mcp.rs  build_tool_source_mcp_config.rs  build_tool_source_working_folder.rs  builtin_tool_filter.rs  completion_check_test.rs  compress_integration.rs  config_summary.rs  embedder.rs  exa_http.rs  file_tool_source.rs  grep_file_tool.rs  init_logging.rs  llm_headers_http_test.rs  llm_headers_integration.rs  llm_live_api_bash.rs  llm_live_api_full_tools.rs  lsp_tool.rs  mcp_config_e2e.rs  mcp_session.rs  mcp_tool_source.rs  memory.rs  memory_in_memory.rs  memory_lance.rs  memory_sqlite.rs  memory_sqlite_vec.rs  memory_tools_source.rs  mock_llm.rs  mock_tool_source.rs  model_workflow.rs  model_workflow_test.rs  multiedit_tool.rs  multimodal_e2e.rs  name_node.rs  openai_sse.rs  powershell_tool.rs  (+20 more)
loom/tools/: apply_patch.yaml  get_recent_messages.yaml  glob.yaml  grep.yaml  invoke_agent.yaml  list_memories.yaml  ls.yaml  lsp.yaml  move_file.yaml  multiedit.yaml  powershell.yaml  recall.yaml  search_memories.yaml  skill.yaml  todo_read.yaml  todo_write.yaml  twitter_search.yaml  web_fetcher.yaml  websearch.yaml  write_file.yaml
model-spec-core/: Cargo.toml
model-spec-core/src/: cost.rs  lib.rs  limit.rs  model.rs  parser.rs  provider.rs  spec.rs  tier.rs
serve/: Cargo.toml
serve/src/: agents.rs  app.rs  connection.rs  lib.rs  models.rs  response.rs  run.rs  tools.rs  user_messages.rs  workspace.rs
serve/tests/: server_e2e.rs
stream-event/: Cargo.toml
stream-event/src/: envelope.rs  event.rs  lib.rs
stream-event/tests/: stream_event.rs
telegram-bot/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CHANGELOG.md  CODE_ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEVPLAN.md  PROGRESS.md  README.md  REFACTOR_PLAN.md  REVIEW.md  config.example.toml  telegram-bot.example.toml
telegram-bot/src/: agent.rs  bot.rs  constants.rs  download.rs  error.rs  handler.rs  handler_deps.rs  handler_new.rs  health.rs  lib.rs  logging.rs  main.rs  metrics.rs  mock.rs  model_selection.rs  router.rs  sender.rs  session.rs  traits.rs  utils.rs
telegram-bot/tests/: bot_startup_test.rs  concurrency_test.rs  handler_dispatch_mock_test.rs  integration_test.rs  message_flow_test.rs  streaming_message_handler_test.rs
(+827 files in other folders)
