[workspace]
resolver = "2"
members = [
    "loom",
    "loom-examples",
    "cli",
    "serve",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["loom contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
dotenv = "0.15"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
tokio-stream = { version = "0.1", features = ["sync"] }
