[workspace]
resolver = "2"
members = [
    "loom",
    "config",
    "loom-examples",
    "cli",
    "serve",
    "stream-event",
    "loom-workspace",
    "loom-acp",
    "loom-workspace/gh",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["loom contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
dotenv = "0.15"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
tokio-stream = { version = "0.1", features = ["sync"] }
