[package]
name = "cli"
version.workspace = true
edition.workspace = true
description = "CLI for Loom: run ReAct agent from the command line"
license.workspace = true
authors.workspace = true

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
loom = { path = "../loom" }
serve = { path = "../serve" }
config = { path = "../config" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net"] }
clap = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

[dev-dependencies]
dotenv = { workspace = true }
tempfile = "3"
