[package]
name = "config"
version.workspace = true
edition.workspace = true
description = "Load .env and TOML config for Loom (single place for all env/config under ~/.loom)"
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
