[package]
name = "config"
version.workspace = true
edition.workspace = true
description = "Load .env and TOML config for Loom (single place for all env/config under ~/.loom)"
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
# Shared tracing file appender + path resolution for CLI / loom-acp (optional to keep `config` lean).
tracing-init = ["dep:tracing-subscriber", "dep:tracing-appender"]

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
ureq = { version = "3", default-features = true }
tracing-subscriber = { version = "0.3", optional = true, features = [
    "env-filter",
] }
tracing-appender = { version = "0.2", optional = true }
model-spec-core = { path = "../model-spec-core" }

[dev-dependencies]
tempfile = "3"
