[package]
name = "graphweave-cli"
version.workspace = true
edition.workspace = true
description = "CLI for GraphWeave: run ReAct agent from the command line"
license.workspace = true
authors.workspace = true

[lib]
name = "graphweave_cli"
path = "src/lib.rs"

[[bin]]
name = "graphweave"
path = "src/main.rs"

[dependencies]
graphweave = { path = "../graphweave" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
clap = { workspace = true }
dotenv = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
