[package]
name = "loom-acp"
version.workspace = true
edition.workspace = true
description = "ACP (Agent Client Protocol) server for Loom — run Loom as an ACP agent in IDEs"
license.workspace = true
authors.workspace = true

[[bin]]
name = "loom-acp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
loom = { path = "../loom" }
config = { path = "../config" }
agent-client-protocol = "0.10"
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
cross-xdg = "2"
clap = { workspace = true }
