[package]
name = "loom-acp"
version.workspace = true
edition.workspace = true
description = "ACP (Agent Client Protocol) server for Loom — run Loom as an ACP agent in IDEs"
license.workspace = true
authors.workspace = true

[[bin]]
name = "loom-acp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
loom = { path = "../loom" }
config = { path = "../config", features = ["tracing-init"] }
agent-client-protocol = { version = "0.10", features = ["unstable_boolean_config", "unstable_session_model", "unstable_session_fork"] }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
rusqlite = "0.31"
chrono = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { workspace = true }
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
serde_json = "1.0"
temp-env = { version = "0.3.6", features = ["async_closure"] }
tempfile = "3"
wiremock = "0.6"
