[package]
name = "loom-workspace"
version.workspace = true
edition.workspace = true
description = "Workspace and thread association for Loom (separate crate, own storage)"
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
