[package]
name = "loom"
version.workspace = true
edition.workspace = true
description = "Loom: minimal agents in Rust with state-in, state-out design"
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[features]
# Persistent store with vector search via LanceDB (16-memory-design §5.2.1, long-term-memory-store P4)
lance = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema"]

[dependencies]
stream-event = { path = "../stream-event" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { workspace = true }
dashmap = "6.0"
futures-util = "0.3"
futures = "0.3"
once_cell = "1.19"

async-openai = { version = "0.32", features = ["chat-completion", "embedding", "model"] }
dotenv = { workspace = true }
crossbeam-channel = "0.5"
mcp_client = { git = "https://github.com/graphweave/mcm-rust", package = "mcp_client" }
mcp_core = { git = "https://github.com/graphweave/mcm-rust", package = "mcp_core" }
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"

# Optional: LanceDB for persistent Store with vector search (feature "lance").
lancedb = { version = "0.23", optional = true }
arrow-array = { version = "56.2", optional = true }
arrow-schema = { version = "56.2", optional = true }
# futures is now a required dependency (moved above)

# SQLite vector store (SqliteVecStore) for long-term memory with semantic search.
sqlite-vec = "0.1"

# HTTP client for web fetcher tool
reqwest = { version = "0.12", features = ["json"] }

# YAML tool definitions (embedded at compile time, parsed at runtime)
serde_yaml = "0.9"

# Glob tool: recursive walk + pattern match under working folder
walkdir = "2"
glob = "0.3"
which = "6.0"

# Grep tool: ripgrep library stack (grep-regex + grep-searcher + ignore)
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
regex = "1"

# Env + config (load_and_apply, mcp.json discover/parse); local name avoids clash with loom's internal config module
env_config = { path = "../config", package = "config" }

# ISO timestamps (context_persistence; serde for future InteractionEntry)
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7.18", features = ["rt"] }

# LSP support
lsp-types = "0.95"
jsonrpc-core = "18.0"
url = "2.5"

[dev-dependencies]
async-trait = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctor = "0.2"

