[package]
name = "model-spec-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared model/provider spec types and parsers for Loom"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
