[package]
name = "serve"
version.workspace = true
edition.workspace = true
description = "WebSocket server for Loom CLI remote mode (axum + ws)"
license.workspace = true
authors.workspace = true

[lib]
name = "serve"
path = "src/lib.rs"

[dependencies]
loom = { path = "../loom" }
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
dotenv = "0.15"
loom = { path = "../loom" }
