[package]
name = "serve"
version.workspace = true
edition.workspace = true
description = "WebSocket server for Loom CLI remote mode (axum + ws)"
license.workspace = true
authors.workspace = true

[lib]
name = "serve"
path = "src/lib.rs"

[dependencies]
loom = { path = "../loom" }
config = { path = "../config" }
loom-workspace = { path = "../loom-workspace" }
axum = { version = "0.7", features = ["ws", "json"] }
async-trait = "0.1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[features]
test-server = []

[[bin]]
name = "test-server"
path = "src/bin/test-server.rs"
required-features = ["test-server"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
dotenv = "0.15"
loom = { path = "../loom" }
tempfile = "3"
