[package]
name = "stream-event"
version.workspace = true
edition.workspace = true
description = "Stream event protocol: type + payload + envelope (protocol_spec)"
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
