[package]
name = "telegram-bot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Teloxide for Telegram bot
teloxide = { version = "0.13", features = ["macros", "webhooks"] }
teloxide-core = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
tracing-appender = "0.2"

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Date/time
chrono = "0.4"

# Config (local workspace crate)
config = { path = "../config" }

[[bin]]
name = "telegram-bot"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
