[package]
name = "telegram-bot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
teloxide = { version = "0.13", features = ["macros", "webhooks"] }
teloxide-core = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
tracing-appender = "0.2"
thiserror = { workspace = true }
anyhow = "1.0"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
config = { path = "../config" }
loom = { path = "../loom" }

[[bin]]
name = "telegram-bot"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
